# asx-custom

./: .copier-answers.yml  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .pylintrc-mandatory  .travis.yml  README.md  oca_dependencies.txt  pyproject.toml  requirements.txt
account_ext_asx/: __manifest__.py
account_financial_report/: README.rst
account_financial_report_extended/: README.rst  __init__.py  __manifest__.py
account_financial_risk_ext/: README.rst  __manifest__.py
account_invoice_filter_adj/: README.rst  __manifest__.py
account_invoice_memo/: README.rst  __manifest__.py
account_invoice_report_industory/: __manifest__.py
account_invoice_report_industry/: README.rst  __manifest__.py
account_invoice_report_vat/: README.rst  __manifest__.py
account_invoice_send_date/: __manifest__.py
account_invoice_sent_date/: README.rst  __manifest__.py
account_invoice_validate_adj/: README.rst  __manifest__.py
account_payment_evidence_status/: README.rst  __manifest__.py
account_payment_related_invoice/: README.rst  __manifest__.py
account_view_adj_asx/: README.rst  __manifest__.py
cenit_base/: __manifest__.py
delivery_adj_asx/: README.rst  __manifest__.py
group_3pl/: README.rst  __manifest__.py
model_security_adjust_asx/: README.rst  __manifest__.py
partner_statement_filename_adj/: README.rst  __manifest__.py
partner_view_adj_asx/: README.rst  __manifest__.py
product_permission_adj_asx/: README.rst  __manifest__.py
product_security/: __manifest__.py
product_standard_price_restriction/: README.rst  __manifest__.py
(+354 files in other folders)
