[tool.poetry]
name = "asx-custom"
version = "0.0.0" # Just a placeholder; the real version is the git tag
authors = ["Odoo Community Association (OCA)", "Quartile Limited"]
description = "asx-custom"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
copier = "^5.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pre-commit = "^2.4.0"
pytest-xdist = "^1.32.0"
flake8 = "^3.8.1"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
